@@ -17,7 +17,7 @@
 #include <stdlib.h>
 #include "board.h"
 
-#include "clk_gpio_init.c"
+#include "clk_gpio_init-stm32.c"
 
 #define CORTEX_PRIORITY_BITS    4
 #define CORTEX_PRIORITY_MASK(n)  ((n) << (8 - CORTEX_PRIORITY_BITS))
@@ -25,17 +25,17 @@
 #define STM32_USB_IRQ_PRIORITY   11
 
 struct NVIC {
-  uint32_t ISER[8];
-  uint32_t unused1[24];
-  uint32_t ICER[8];
-  uint32_t unused2[24];
-  uint32_t ISPR[8];
-  uint32_t unused3[24];
-  uint32_t ICPR[8];
-  uint32_t unused4[24];
-  uint32_t IABR[8];
-  uint32_t unused5[56];
-  uint32_t IPR[60];
+  volatile uint32_t ISER[8];
+  volatile uint32_t unused1[24];
+  volatile uint32_t ICER[8];
+  volatile uint32_t unused2[24];
+  volatile uint32_t ISPR[8];
+  volatile uint32_t unused3[24];
+  volatile uint32_t ICPR[8];
+  volatile uint32_t unused4[24];
+  volatile uint32_t IABR[8];
+  volatile uint32_t unused5[56];
+  volatile uint32_t IPR[60];
 };
 
 static struct NVIC *const NVICBase = ((struct NVIC *const)0xE000E100);
