@@ -1,3 +1,15 @@
+2016-05-12  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx: Update
+	* src/sys.c: Update from Chopstx.
+	* src/usb_lld.h: Likewise.
+	* src/usb_stm32f103.c: Likewise.
+
+	* src/usb_ctrl.c (usb_intr): Follow the change of USB API.
+	* src/main.c (usb_cb_rx_ready, usb_cb_tx_done): Likewise.
+
+	* src/adc.h: Remove unused declarations.
+
 2016-03-08  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/gnuk_token.py (gnuk_token.__init__, regnual.__init__):
